--- a/aostaindex.html
+++ b/aostaindex.html
@@ -35,7 +35,7 @@
                 <h2>Kuukausi Italian alpeilla lumilautailemassa</h2>
                 <h3>Tuomo Kähönen | 2023</h3>
                 <p>Omaksi iloksemme ja muistoksi kirjoitettu matkakertomus vuoden 2023 alppireissusta</p>        
-                <a href="https://pubservices.kosila.fi/aostassa2023/">
+                <a href="index.html">
                     <button style="
                         border-radius: 8px;
                         background-color: dodgerblue;
@@ -54,9 +54,9 @@
                 <h2>Sisällysluettelo</h2>
                 
                 <table style="width: 90%">
-                    <tr><td><a href="https://pubservices.kosila.fi/aostassa2023/">Kansilehti</a></p></td><td>Sivu 1</td></tr>
-                    <tr><td><a href="https://pubservices.kosila.fi/aostassa2023/#/article/2/page/1-1/modal/text431.txt8522937158">Prologi | Alkusanat</a></p></td><td>Sivu 2</td></tr>
-                    <tr><td><a href="https://pubservices.kosila.fi/aostassa2023/#/article/3/page/1-1/modal/text508.txt85121257866">Päivä 1 | Helsinki - Aosta</a></p></td><td>Sivu 3</td></tr>
+                    <tr><td><a href="/">Kansilehti</a></p></td><td>Sivu 1</td></tr>
+                    <tr><td><a href="#/article/2/page/1-1/modal/text431.txt8522937158">Prologi | Alkusanat</a></p></td><td>Sivu 2</td></tr>
+                    <tr><td><a href="#/article/3/page/1-1/modal/text508.txt85121257866">Päivä 1 | Helsinki - Aosta</a></p></td><td>Sivu 3</td></tr>
                     <tr><td><a href="https://pubservices.kosila.fi/aostassa2023/#/article/4/page/1-1/modal/text587.txt61515236456">Päivä 2 | Pila</a></p></td><td>Sivu 4</td></tr>
                     <tr><td><a href="https://pubservices.kosila.fi/aostassa2023/#/article/5/page/1-1/modal/text689.txt451102565975">Päivä 3 | Courmayer</a></p></td><td>Sivu 5</td></tr>
                     <tr><td><a href="https://pubservices.kosila.fi/aostassa2023/#/article/5/page/1-1/modal/text638.txt8513853770">Päivä 4 | Cervinia, Zermat</a></p></td><td>Sivu 5</td></tr>
