fix links again

--- a/aostaindex.html
+++ b/aostaindex.html
@@ -54,17 +54,17 @@
                 <h2>Sisällysluettelo</h2>
                 
                 <table style="width: 90%">
-                    <tr><td><a href="/">Kansilehti</a></p></td><td>Sivu 1</td></tr>
-                    <tr><td><a href="#/article/2/page/1-1/modal/text431.txt8522937158">Prologi | Alkusanat</a></p></td><td>Sivu 2</td></tr>
-                    <tr><td><a href="#/article/3/page/1-1/modal/text508.txt85121257866">Päivä 1 | Helsinki - Aosta</a></p></td><td>Sivu 3</td></tr>
-                    <tr><td><a href="https://pubservices.kosila.fi/aostassa2023/#/article/4/page/1-1/modal/text587.txt61515236456">Päivä 2 | Pila</a></p></td><td>Sivu 4</td></tr>
-                    <tr><td><a href="https://pubservices.kosila.fi/aostassa2023/#/article/5/page/1-1/modal/text689.txt451102565975">Päivä 3 | Courmayer</a></p></td><td>Sivu 5</td></tr>
-                    <tr><td><a href="https://pubservices.kosila.fi/aostassa2023/#/article/5/page/1-1/modal/text638.txt8513853770">Päivä 4 | Cervinia, Zermat</a></p></td><td>Sivu 5</td></tr>
-                    <tr><td><a href="https://pubservices.kosila.fi/aostassa2023/#/article/6/page/1-1/modal/text741.txt559880359">Päivä 5 | Muutto La Thuilen rinteeseen</a></p></td><td>Sivu 6</td></tr>
-                    <tr><td><a href="https://pubservices.kosila.fi/aostassa2023/#/article/7/page/1-1/modal/text967.txt117142380392">Päivät 6 - 13 | La Thuile, La Rosiere</a></p></td><td>Sivu 7</td></tr>
-                    <tr><td><a href="https://pubservices.kosila.fi/aostassa2023/#/article/8/page/1-1/modal/text853.txt10185117866">Päivät 14 - 22 | La Salle, Courmayer, Pila</a></p></td><td>Sivu 8</td></tr>
-                    <tr><td><a href="https://pubservices.kosila.fi/aostassa2023/#/article/10/page/1-1/modal/text1091.txt10287117866">Päivät 23 - 28 | Perhetreffit Champolucissa</a></p></td><td>Sivu 10</td></tr>
-                    <tr><td><a href="https://pubservices.kosila.fi/aostassa2023/#/article/11/page/1-1/modal/text1187.txt1011503117866">Päivät 28 -31 | Takaisin kaupunkiin ja Pilaan</a></p></td><td>Sivu 11</td></tr>
+                    <tr><td><a href="./">Kansilehti</a></p></td><td>Sivu 1</td></tr>
+                    <tr><td><a href="./#/article/2/page/1-1/modal/text431.txt8522937158">Prologi | Alkusanat</a></p></td><td>Sivu 2</td></tr>
+                    <tr><td><a href="./#/article/3/page/1-1/modal/text508.txt85121257866">Päivä 1 | Helsinki - Aosta</a></p></td><td>Sivu 3</td></tr>
+                    <tr><td><a href="./#/article/4/page/1-1/modal/text587.txt61515236456">Päivä 2 | Pila</a></p></td><td>Sivu 4</td></tr>
+                    <tr><td><a href="./#/article/5/page/1-1/modal/text689.txt451102565975">Päivä 3 | Courmayer</a></p></td><td>Sivu 5</td></tr>
+                    <tr><td><a href="./#/article/5/page/1-1/modal/text638.txt8513853770">Päivä 4 | Cervinia, Zermat</a></p></td><td>Sivu 5</td></tr>
+                    <tr><td><a href="./#/article/6/page/1-1/modal/text741.txt559880359">Päivä 5 | Muutto La Thuilen rinteeseen</a></p></td><td>Sivu 6</td></tr>
+                    <tr><td><a href="./#/article/7/page/1-1/modal/text967.txt117142380392">Päivät 6 - 13 | La Thuile, La Rosiere</a></p></td><td>Sivu 7</td></tr>
+                    <tr><td><a href=".3/#/article/8/page/1-1/modal/text853.txt10185117866">Päivät 14 - 22 | La Salle, Courmayer, Pila</a></p></td><td>Sivu 8</td></tr>
+                    <tr><td><a href="./#/article/10/page/1-1/modal/text1091.txt10287117866">Päivät 23 - 28 | Perhetreffit Champolucissa</a></p></td><td>Sivu 10</td></tr>
+                    <tr><td><a href="./#/article/11/page/1-1/modal/text1187.txt1011503117866">Päivät 28 -31 | Takaisin kaupunkiin ja Pilaan</a></p></td><td>Sivu 11</td></tr>
                 </table>
             </nav>
         </div>
